--- a/70_pf/dothome/volkswagen/css/style.css
+++ b/70_pf/dothome/volkswagen/css/style.css
@@ -1,17 +1,14 @@
 @charset "utf-8";
-@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css);
 
 * {
     /* padding과 border 크기를 박스의 안쪽으로 지정한다. */
     box-sizing: border-box;
-}
-
-body, ul, h1, h2, p {
     margin: 0;
+    padding: 0;
 }
 
 body {
-    font: 16px/1.6 "굴림", sans-serif;
+    font: 15px/1.6 "돋움", sans-serif;
     background-color: #fff;
     color: #333;
 }
@@ -29,6 +26,11 @@ ul {
 
 img {
     vertical-align: top;
+}
+
+.wrap {
+    position: relative;;
+    width: 1920px;
 }
 
 header, .contents, footer {
@@ -106,6 +108,7 @@ nav {
 }
 
 .slide {
+    width: 1920px;
     height: 350px;
     overflow: hidden;
     position: relative;
@@ -114,9 +117,10 @@ nav {
 
 .slide ul {
     position: absolute;
+    /* display: flex;  좌우슬라이드할때 left*/
     width: 100%;
-    height: 400%;
-    animation: slide 6s infinite;
+    height: 100%;
+    animation: slide 8s infinite;
 }
 
 @keyframes slide {
@@ -128,6 +132,15 @@ nav {
     76% {top: -300%}
     99.99% {top: -300%}
     100% {top: 0%}
+}
+
+.absolute {
+    position: absolute;
+    width: 1340px;
+    margin: 0 auto;
+    top: 330px; /* 헤더+슬라이드 450px - 링크120px */
+    left: 290px; /* 전체 1920px - wrap 1340px = 580px / 2 */
+
 }
 
 .contents {
@@ -221,9 +234,10 @@ footer {
     /* align-items와 align-contents를 함께 사용하면 align-contents가 적용된다. */
     /* align-items: center; */
     /* align-content: center; */
-    height: 120px;
+    height: 100px;
     background-color: #333;
     color: #777;
+    justify-content: space-between;
 }
 
 footer a {
@@ -233,15 +247,12 @@ footer a {
 .blogo {
     width: 199px;
     height: 40px;
-    margin: 35px 20px 0;
-}
-
-.blogo img {
+    margin: 25px 20px 0;
 }
 
 .copy {
     width: 1000px;
-    padding-top: 35px;
+    padding-top: 25px;
 }
 
 .right {
@@ -250,7 +261,7 @@ footer a {
 
 
 .fs {
-    padding-top: 24px;
+    padding-top: 40px;
 }
 /* .sns li:nth-of-type(1)::after {
     content: "|";
