--- a/70_pf/dothome/haeundae/css/style.css
+++ b/70_pf/dothome/haeundae/css/style.css
@@ -113,21 +113,54 @@ header {
 
 /* 슬라이드 */
 .slide {
+    position: relative;
     height: 350px;
     overflow: hidden;
-    background: blue;
 }
 
-.slide ul {
-    position: relative;
-    animation: slide 8s infinite;
+.slide li {
+    position: absolute;
+    animation: 8s infinite;
 }
 
-@keyframes slide {
-    0% {opacity: 0;}
-    99% {opacity: 100%;}
+.slide li:nth-of-type(1) {
+    animation-name: slide1;
+
+}
+.slide li:nth-of-type(2) {
+    animation-name: slide2;
+    opacity: 0;
+}
+.slide li:nth-of-type(3) {
+    animation-name: slide3;
+    opacity: 0;
+}
+
+@keyframes slide1 {
+    0% { opacity: 0;}
+    10% {opacity: 1;}
+    43% {opacity: 1;}
+    66% {opacity: 0;}
     100% {opacity: 0;}
 }
+
+@keyframes slide2 {
+    0% {opacity: 0;}
+    33% {opacity: 0;}
+    43% {opacity: 1;}
+    66% {opacity: 1;}
+    76% {opacity: 0;}
+    100% {opacity: 0;}
+}
+
+@keyframes slide3 {
+    0% {opacity: 1;}
+    10% {opacity: 0;}
+    66% {opacity: 0;}
+    76% {opacity: 1;}
+    100% {opacity: 1;}
+}
+
 /* 공지사항~바로가기링크 */
 .contents {
     display: flex;
