--- a/70_pf/dothome/volkswagen/css/style.css
+++ b/70_pf/dothome/volkswagen/css/style.css
@@ -199,7 +199,7 @@ nav {
     padding-right: 10px;
 }
 
-.notice>ul>li:hover {
+.notice>ul>li>a:hover {
     text-decoration: underline;
 }
 
@@ -287,7 +287,6 @@ footer a {
 
 .popup {
     width: 500px;
-    height: 500px;
     background: #fff;
     margin: 150px auto;
     padding: 20px;
@@ -298,7 +297,5 @@ footer a {
 }
 
 .popup a {
-    background: #333;
-    color: #fff;
-    padding: 5px 2px;
+    padding: 2px 5px;
 }
