--- a/70_pf/dothome/kyowontour/css/style.css
+++ b/70_pf/dothome/kyowontour/css/style.css
@@ -254,45 +254,27 @@ header {
 }
 
 /* slide */
-.slide {
+#slider {
     width: calc(100% - 600px);
     overflow: hidden;
     /* overflow: hidden; 넘치면 숨기는 기능 */
 }
 
-.slide ul {
+/* #slider img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover
+    ;
+} */
+
+#slider ul {
     position: relative;
     display: flex;
-    width: calc(100% - 600px);
-    animation: slide 8s infinite;
+    left: 0;
+    width: calc((100% - 600px) * 3);
+    /* height: 100%; */
 }
 
-@keyframes slide {
-    0% {
-        left: 0%;
-    }
-    10% {
-        left: -100%;
-    }
-    33% {
-        left: -100%;
-    }
-    43% {
-        left: -200%;
-    }
-    66% {
-        left: -200%;
-    }
-    76% {
-        left: -300%;
-    }
-    99.99% {
-        left: -300%;
-    }
-    100% {
-        left: 0%;
-    }
-}
 
 /* footer */
 footer {
