--- a/70_pf/karts/css/style.css
+++ b/70_pf/karts/css/style.css
@@ -2,11 +2,8 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css);
 
 * {
-    /* padding과 border 크기를 박스의 안쪽으로 지정한다. */
     box-sizing: border-box;
-}
-
-body, ul, h1, h2, p {
+    padding: 0;
     margin: 0;
 }
 
@@ -22,10 +19,12 @@ a {
 }
 
 ul {
-    padding: 0;
     list-style: none;
 }
-/* 주조색 50%이상 color: #1b3b86; */
+
+img {
+    vertical-align: top;
+}
 
 header, .contents, footer {
     width: 1340px;
@@ -73,15 +72,12 @@ nav a {
 .slide {
     height: 350px;
     overflow: hidden;
+    position: relative;
 }
 
 
-.slide li+li {
-    /*
-        li 밑에 있는 동생 li 숨기기
-    이후 슬라이드 구현 시 지워야 하는 부분
-    */
-    display: none;
+.slide li {
+    position: absolute;
 }
 
 .contents {
