--- a/70_pf/dothome/bluebottle/css/style.css
+++ b/70_pf/dothome/bluebottle/css/style.css
@@ -277,32 +277,34 @@ footer .inner {
     padding: 8px 0 0 16px;
 }
 
-.modal {
+#modal-overlay {
     display: none;
     position: fixed;
     top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(51, 51, 51, 0.5);
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
     z-index: 999;
 }
 
-.popup {
-    margin: 50px auto;
-    width: 500px;
-    padding: 50px;
-    background: #fff;
+#modal-popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
 }
 
-.popup p {
-    margin-bottom: 30px;
 
-}
-
-.popup div {
+#modal-popup div {
     text-align: right;
 }
 
-.popup button {
+#modal-popup button {
     padding: 2px 5px;
 }
