--- a/70_pf/dothome/daewooenc/css/style.css
+++ b/70_pf/dothome/daewooenc/css/style.css
@@ -114,28 +114,18 @@ header {
 #popup {
     display: none;
     position: fixed;
-    z-index: 2;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-}
-
-#popup:target {
-    display: block;
-}
-/* 팝업창 */
-.popup_content {
-    /* position: relative; */
-    margin: 10% auto;
-    padding: 20px;
-    background: #fff;
     width: 500px;
+    height: 300px;
+    z-index: 2;
+    top: 20%;
+    left: calc(50% - 300px);
+    padding: 20px;
+    border: 1px solid #333;
+    background: #fff;
 }
 
 /* 닫기 버튼 */
-.close_btn {
+#popup button {
     display: inline-block;
     background: #333;
     color: #fff;
@@ -143,7 +133,7 @@ header {
     border-radius: 4px;
 }
 
-.outer_btn {
+#popup div {
     text-align: right;
 }
 
