--- a/70_pf/SRT/css/style.css
+++ b/70_pf/SRT/css/style.css
@@ -14,6 +14,15 @@
     background: background 0.3s;
 }
 
+
+
+
+
+
+
+
+
+/* ------------------------------------------------------ */
 /* 전체 */
 #section2 {
     position: relative;
@@ -26,6 +35,7 @@
     transition: background 0.5s;
     /* background: #3498db; */
 }
+
 
 /* 섹션타이틀 */
 .section2_title {
@@ -40,8 +50,8 @@
     font-size: 16px;
 }
 
-/* 탭메뉴 */
 
+/* 탭메뉴 */
 .tabs {
     text-align: center;
     padding-top: 30px;
@@ -72,7 +82,38 @@
     color: #fff;
 }
 
-/* 여행정보페이지 */
+
+/* 슬라이드 화살표 버튼 */
+.arrow_left {
+    position: absolute;
+    z-index: 1;
+    top: 42%;
+    left: 334px;
+}
+
+.arrow_right {
+    position: absolute;
+    z-index: 1;
+    top: 42%;
+    right: 345px;
+}
+
+.arrow_left img,
+.arrow_right img {
+    background: rgba(255, 255, 255, 0.6);
+    border-radius: 50px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    transition: background 0.3s;
+    cursor: pointer;
+}
+
+.arrow_left img:hover,
+.arrow_right img:hover {
+    background: #fff;
+}
+
+
+/* 캐로셀 컨텐츠 부분 */
 .tour_carousel_container {
     position: relative;
     width: 1205px;
@@ -91,7 +132,6 @@
 .tour_carousel {
     position: relative;
     display: flex;
-    /* justify-content: space-between; */
     margin: 0 auto;
     width: calc(283px * 6 + 20px * 5);
     transition: transform 0.5s ease-in-out;
@@ -136,34 +176,6 @@
     color: #888;
 }
 
-/* 화살표이동 */
-.arrow_left {
-    position: absolute;
-    z-index: 1;
-    top: 42%;
-    left: 334px;
-}
-
-.arrow_right {
-    position: absolute;
-    z-index: 1;
-    top: 42%;
-    right: 345px;
-}
-
-.arrow_left img,
-.arrow_right img {
-    background: rgba(255, 255, 255, 0.6);
-    border-radius: 50px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-    transition: background 0.3s;
-    cursor: pointer;
-}
-
-.arrow_left img:hover,
-.arrow_right img:hover {
-    background: #fff;
-}
 
 /* 탭메뉴 하단버튼 */
 .tour_button {
