--- a/70_pf/SRT/css/reset.css
+++ b/70_pf/SRT/css/reset.css
@@ -1,6 +1,12 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
 
+:root {
+    --mainColor: #4c2f48;
+    --subColor: #C8B158;
+
+}
+
 * {
     padding: 0;
     margin: 0;
