--- a/70_pf/SRT/css/tour_best.css
+++ b/70_pf/SRT/css/tour_best.css
@@ -7,11 +7,11 @@
     margin: 0 auto;
 }
 
+/* 헤더임시고정 */
 .header_container {
     width: 100%;
 }
 
-/* 헤더임시고정 */
 #header {
     width: 100%;
     height: 140px;
@@ -32,27 +32,96 @@
 .best_container {
     width: 1200px;
     height: 1615px;
-    background: antiquewhite;
+    background: rgb(87, 62, 29);
     margin: 0 auto;
+    margin-top: 25px;
     display: flex;
     justify-content: space-between;
 }
 
-.best_left {
+/* 왼쪽 컨텐츠 + 리모콘 */
+.sidebar {
     width: 320px;
-    height: 730px;
+    height: 1520px;
     background: yellowgreen;
-    margin-top: 25px;
+    padding-bottom: 20px;
+    /* transform: translateY(-20%); */
 }
 
+.sidebar_contents {
+    width: 320px;
+    height: 730px;
+    background: rebeccapurple;
+}
+
+/* 스크롤 효과 */
+.sidebar_contents.sticky {
+    position: fixed;
+    top: 20px;
+    width: 320px;
+}
+
+.sidebar_contents.bottom {
+    position: absolute;
+    bottom: 0;
+}
+
+
+/* 오른쪽 컨텐츠 */
 .best_right {
     width: 856px;
     height: 1460px;
     background: yellow;
-    margin-top: 25px;
 }
+
+.best_sub {
+    width: 100%;
+    height: 42px;
+    background: hotpink;
+}
+
+.best_sub_2 {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 20px;
+    background: #eee;
+}
+
+.search_left p {
+    color: var(--grayTextColor);
+}
+
+.search_right ul {
+    display: flex;
+}
+
+.search_right a {
+    color: var(--grayTextColor);
+}
+
+.search_right li:not(:last-child)::after {
+    content: "|";
+    margin: 0 16px;
+    color: var(--grayTextColor);
+
+}
+
+
+.search_right a:hover {
+    font-weight: bold;
+    color: var(--mainTextColor);
+}
+
+.search_right a.active {
+    font-weight: bold;
+    color: var(--mainTextColor);
+
+}
+
+
 /* 푸터 */
-footer {
+.footer {
     width: 100%;
     height: 300px;
     background: #555;
