--- a/70_pf/tourist copy/css/test.css
+++ b/70_pf/tourist copy/css/test.css
@@ -1,13 +1,50 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
+:root {
+    --color-gray1: #333;
+    --color-gray2: #111;
+    --color-gray3: #555;
+}
+
 body {
+    font: 15px/1.6 "Roboto", sans-serif;
+    margin: 0;
+    color: var(--color-gray3);
+}
+
+h2 {
+    font-size: 40px;
+    font-weight: 700;
+    margin: 0;
+    padding: 40px;
+}
+
+h3 {
+    font-size: 18px;
+    font-weight: 700;
+    padding-top: 16px;
     margin: 0;
 }
 
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+p {
+    padding: 10px 0 24px 0;
+}
+
+a {
+    text-decoration: none;
+    color: var(--color-gray2);
+}
 
 .box_inner {
     width: 1050px;
@@ -30,16 +67,36 @@ header {
 
 /* 섹션1 */
 .main_rolling_pc {
-    height: 550px;
+    height: 650px;
     background: wheat;
 }
 
 /* 섹션2: 인기 여행지 */
 .about_area {
-    height: 876px;
-    background: violet;
+    height: 685px;
+    background: linear-gradient(#fff 30%, #f4f0e9 30%);
+    text-align: center;
 }
 
+.about_area ul {
+    display: flex;
+    justify-content: center;
+    gap: 1%; /* 1920px의 1% */
+}
+
+.about_area li {
+    width: 340px;
+    height: 500px;
+}
+
+.about_area a {
+    border-top: 2px solid var(--color-gray2);
+    padding-top: 4px;
+}
+
+/* .about_area li:not(:first-of-type) {
+    margin-left: 2%;
+} */
 
 /* 섹션3: 상담 및 최근게시물 */
 .appbbs_area {
