--- a/70_pf/tourist copy/css/test.css
+++ b/70_pf/tourist copy/css/test.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    font: 15px/1.6 "Roboto", sans-serif;
+    font: 16px/1.6 "Roboto", sans-serif;
     margin: 0;
     color: var(--color-gray3);
 }
@@ -48,9 +48,7 @@ a {
 
 .box_inner {
     width: 1050px;
-    height: 113px;
     margin: 0 auto;
-    background: darkmagenta;
 }
 
 footer {
@@ -61,6 +59,7 @@ footer {
 header {
     position: absolute;
     width: 100%;
+    height: 113px;
     z-index: 9999;
     background: rgba(0,0,0,0.5);
 }
@@ -100,8 +99,74 @@ header {
 
 /* 섹션3: 상담 및 최근게시물 */
 .appbbs_area {
-    height: 256px;
-    padding: 60px 0;
-    background: darkcyan;
+    padding: 56px 0 136px;
 
+}
+
+.link {
+    background: url("http://picsum.photos/id/109/200/300") no-repeat 0 0/cover;
+    padding: 48px;
+}
+
+.link a {
+    display: inline-block;
+    border: 2px solid #fff;
+}
+
+.link a:first-of-type {
+    margin-right: 6px;
+}
+
+.appbbs_area .box_inner {
+    display: flex;
+}
+
+.notice {
+    margin-left: 40px;
+    line-height: 2;
+}
+
+.notice h3 {
+    font-family: 'GothicA1-Light';
+    font-size: 26px;
+    padding: 0;
+    margin-bottom: 8px;
+}
+
+.notice ul {
+list-style: disc;
+}
+
+/* 푸터 */
+
+footer {
+    border-top: 1px solid #ddd;
+    height: 160px;
+}
+
+footer .box_inner {
+    display: flex;
+}
+
+.foot_list {
+    display: flex;
+}
+
+.snslink {
+    display: flex;
+}
+
+.snslink a {
+    display: inline-block;
+    background: no-repeat 0 0/50px 50px;
+}
+
+.snslink li:nth-of-type(1) a {
+    background-image: url("http://picsum.photos/id/12/50/50");
+}
+.snslink li:nth-of-type(2) a {
+    background-image: url("http://picsum.photos/id/14/50/50");
+}
+.snslink li:nth-of-type(3) a {
+    background-image: url("http://picsum.photos/id/10/50/50");
 }
