--- a/70_pf/tourist copy/css/test.css
+++ b/70_pf/tourist copy/css/test.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
     box-sizing: border-box;
@@ -37,10 +37,6 @@ ul {
     list-style: none;
 }
 
-p {
-    padding: 10px 0 24px 0;
-}
-
 a {
     text-decoration: none;
     color: var(--color-gray2);
@@ -61,7 +57,7 @@ header {
     width: 100%;
     height: 113px;
     z-index: 9999;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0, 0, 0, 0.5);
 }
 
 /* 섹션1 */
@@ -88,6 +84,17 @@ header {
     height: 500px;
 }
 
+.about_area h3 {
+    font-size: 18px;
+    font-weight: 700;
+    padding-top: 16px;
+}
+
+.about_area p {
+    padding: 10px 0 24px 0;
+    margin: 0;
+}
+
 .about_area a {
     border-top: 2px solid var(--color-gray2);
     padding-top: 4px;
@@ -100,11 +107,10 @@ header {
 /* 섹션3: 상담 및 최근게시물 */
 .appbbs_area {
     padding: 56px 0 136px;
-
 }
 
 .link {
-    background: url("http://picsum.photos/id/109/200/300") no-repeat 0 0/cover;
+    background: url("http://picsum.photos/id/109/200/300") no-repeat 0 0 / cover;
     padding: 48px;
 }
 
@@ -127,14 +133,14 @@ header {
 }
 
 .notice h3 {
-    font-family: 'GothicA1-Light';
+    font-family: "GothicA1-Light";
     font-size: 26px;
     padding: 0;
     margin-bottom: 8px;
 }
 
 .notice ul {
-list-style: disc;
+    list-style: disc;
 }
 
 /* 푸터 */
@@ -142,14 +148,28 @@ list-style: disc;
 footer {
     border-top: 1px solid #ddd;
     height: 160px;
+    font-size: 13px;
 }
 
 footer .box_inner {
     display: flex;
+    justify-content: space-between;
+}
+
+footer h3 {
+    font-size: 14px;
+    font-weight: normal;
 }
 
 .foot_list {
     display: flex;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.foot_list li:first-of-type::after {
+    content: "|";
+    padding: 0 10px;
 }
 
 .snslink {
