--- a/70_pf/SRT/css/cs.css
+++ b/70_pf/SRT/css/cs.css
@@ -35,7 +35,6 @@
     margin: 0 auto;
     margin-top: 60px;
     margin-bottom: 100px;
-    background: darkgreen;
     display: flex;
     justify-content: space-between;
 }
@@ -43,7 +42,6 @@
 /* 왼쪽 */
 .cs_left {
     width: 550px;
-    background: aliceblue;
 }
 
 .cs_left h3 {
@@ -64,10 +62,10 @@
     margin-right: 40px;
 }
 
+/* SR고객센터 */
 .cs_call {
     display: flex;
     height: 96px;
-
 }
 
 .call_2 {
@@ -77,22 +75,22 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    
 }
 
 .call_2 > p:nth-of-type(1) {
     font-size: 64px;
     font-weight: bold;
     line-height: 1;
-    color: var(--mainColor);
+    color: #4c2f48;
 }
 
 .call_2 > p:nth-of-type(2) {
     font-size: 16px;
-    line-height: 1.3;
+    line-height: 2;
     padding-left: 4px;
 }
 
+/* 운영시간 */
 .cs_time {
     display: flex;
     height: 50px;
@@ -102,6 +100,7 @@
     padding-top: 6px;
 }
 
+/* 메뉴구성 */
 .cs_menu {
     display: flex;
     height: 253px;
@@ -119,19 +118,21 @@
     margin-bottom: 32px;
 }
 
-.ars>div, .counter>div {
+.ars > div,
+.counter > div {
     margin-top: 8px;
     line-height: 2;
 }
 
-.ars div, .counter div {
+.ars div,
+.counter div {
     display: flex;
 }
 
 .n1 {
     font-size: 18px;
-    background: var(--subColor);
-    color: var(--whiteTextColor);
+    background: #C8B158;
+    color: #fff;
     width: 35px;
     height: 35px;
     border-radius: 20px;
@@ -141,6 +142,7 @@
     margin-right: 8px;
 }
 
+/* 실무담당자 */
 .cs_men {
     display: flex;
     height: 30px;
@@ -153,7 +155,13 @@
 /* 오른쪽 */
 .cs_right {
     width: 570px;
-    background: darkcyan;
+}
+
+/* 주요연락처 */
+.number_container {
+    width: 570px;
+    height: 470px;
+    overflow-y: auto;
 }
 
 .cs_right h3 {
@@ -161,21 +169,63 @@
     line-height: 2;
 }
 
-.cs_number {
-    height: 510px;
-    background: #888;
+.number_line {
+    width: 555px;
+    border-top: 3px solid #4c2f48;
 }
 
+.number_container table {
+    width: 100%;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+.number_container th {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    height: 30px;
+    background: #fff;
+
+}
+
+.number_container th:not(:last-of-type) {
+    border-right: 1px solid #D9D9D9;
+}
+
+.number_container th:nth-of-type(1) {
+    width: 175px;
+}
+.number_container th:nth-of-type(2) {
+    width: 140px;
+}
+.number_container th:nth-of-type(3) {
+    width: 235px;
+}
+
+.number_container td {
+    height: 30px;
+    border-bottom: 1px solid #D9D9D9;
+}
+
+.number_container .td1 {
+    border: none;
+}
+
+.number_container td:not(:last-of-type) {
+    border-right: 1px solid #D9D9D9;
+}
+
+/* 주차장 */
 .cs_parking {
     height: 75px;
     margin-top: 38px;
-    background: #888;
 }
 
 .parking_box {
     width: 550px;
     height: 35px;
-    border: 1px solid var(--grayTextColor);
+    border: 1px solid #D9D9D9;
     padding: 6px 0 0 16px;
 }
 
