--- a/70_pf/SRT/css/tour_best.css
+++ b/70_pf/SRT/css/tour_best.css
@@ -52,8 +52,8 @@
     position: relative;
     width: 320px;
     height: 730px;
-    background: var(--whiteTextColor);
-    border: 1px solid var(--grayTextColor);
+    background: #ffffff;
+    border: 1px solid #B5B5B6;
     border-radius: 15px;
 }
 .sidebar_title {
@@ -64,7 +64,7 @@
     height: 34px;
     display: flex;
     padding-bottom: 8px;
-    border-bottom: 1px solid var(--grayTextColor);
+    border-bottom: 1px solid #B5B5B6;
 }
 
 .sidebar_title h1 {
@@ -84,8 +84,8 @@
 }
 
 .sidebar_title button:hover {
-    background: var(--mainColor);
-    color: var(--whiteTextColor);
+    background: #4c2f48;
+    color: #ffffff;
 }
 
 .sidebar_contents_area {
@@ -105,7 +105,7 @@
     position: relative;
     width: 256px;
     height: 90px;
-    border-bottom: 1px solid var(--grayTextColor);
+    border-bottom: 1px solid #B5B5B6;
 
 }
 
@@ -141,28 +141,28 @@
 .item_container {
     height: 75px;
     background: red;
-    border-bottom: 1px solid var(--grayTextColor);
+    border-bottom: 1px solid #B5B5B6;
 
 }
 
 .train_container {
     height: 150px;
     background: orange;
-    border-bottom: 1px solid var(--grayTextColor);
+    border-bottom: 1px solid #B5B5B6;
 
 }
 
 .during_container {
     height: 75px;
     background: yellow;
-    border-bottom: 1px solid var(--grayTextColor);
+    border-bottom: 1px solid #B5B5B6;
 
 }
 
 .day_container {
     height: 112px;
     background: green;
-    border-bottom: 1px solid var(--grayTextColor);
+    border-bottom: 1px solid #B5B5B6;
 
 }
 
@@ -195,7 +195,7 @@
 .best_sub {
     position: relative;
     width: 100%;
-    border-bottom: 3px solid var(--mainColor);
+    border-bottom: 3px solid #4c2f48;
 }
 
 .best_sub_title {
@@ -208,7 +208,7 @@
     font-size: 20px;
     font-weight: bold;
     gap: 8px;
-    color: var(--mainColor);
+    color: #4c2f48;
     background: none;
 }
 
@@ -216,8 +216,8 @@
 .arrow {
     width: 8px;
     height: 8px;
-    border-top: 2px solid var(--mainColor);
-    border-right: 2px solid var(--mainColor);
+    border-top: 2px solid #4c2f48;
+    border-right: 2px solid #4c2f48;
     transform: rotate(-45deg);
     transition: none;
 }
@@ -233,7 +233,7 @@
     width: 100%;
     height: 80px;
     /* border-radius: 10px; */
-    background: var(--mainColor);
+    background: #4c2f48;
     display: flex;
     justify-content: space-evenly;
     text-align: center;
@@ -246,12 +246,12 @@
 }
 
 #best_sub_nav.show {
-    display: block;
+    transition: .3s;
 }
 
 .best_down > li > a {
     display: block;
-    color: var(--whiteTextColor);
+    color: #ffffff;
 }
 
 .best_down > li > a:hover {
@@ -270,7 +270,7 @@
 }
 
 .search_left p {
-    color: var(--grayTextColor);
+    color: #B5B5B6;
 }
 
 .search_right ul {
@@ -278,23 +278,23 @@
 }
 
 .search_right a {
-    color: var(--grayTextColor);
+    color: #B5B5B6;
 }
 
 .search_right li:not(:last-child)::after {
     content: "|";
     margin: 0 16px;
-    color: var(--grayTextColor);
+    color: #B5B5B6;
 }
 
 .search_right a:hover {
     font-weight: bold;
-    color: var(--mainTextColor);
+    color: #333333;
 }
 
 .search_right a.active {
     font-weight: bold;
-    color: var(--mainTextColor);
+    color: #333333;
 }
 
 /* 오른쪽컨텐츠 여행정보 */
@@ -312,7 +312,7 @@
 .best_tour_contents_box {
     width: 100%;
     height: 230px;
-    border: 1px solid var(--grayTextColor);
+    border: 1px solid #B5B5B6;
     border-radius: 15px;
     margin-bottom: 32px;
 }
@@ -346,22 +346,22 @@
 }
 
 .best_btn_area button:hover {
-    background: var(--subColor);
-    color: var(--whiteTextColor);
+    background: #C8B158;
+    color: #ffffff;
     border-radius: 20px;
 }
 
 .best_btn_area .page_num.btnClick {
-    background: var(--subColor);
-    color: var(--whiteTextColor);
+    background: #C8B158;
+    color: #ffffff;
     border-radius: 20px;
 }
 
 .arrow_pagebtnL {
     width: 8px;
     height: 8px;
-    border-top: 2px solid var(--mainColor);
-    border-right: 2px solid var(--mainColor);
+    border-top: 2px solid #4c2f48;
+    border-right: 2px solid #4c2f48;
     transform: rotate(-135deg);
     transition: none;
 }
@@ -369,8 +369,8 @@
 .arrow_pagebtnR {
     width: 8px;
     height: 8px;
-    border-top: 2px solid var(--mainColor);
-    border-right: 2px solid var(--mainColor);
+    border-top: 2px solid #4c2f48;
+    border-right: 2px solid #4c2f48;
     transform: rotate(45deg);
     transition: none;
 }
