--- a/70_pf/SRT/css/sub.css
+++ b/70_pf/SRT/css/sub.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
-@import url("header.css");
+@import url("./header.css");
+@import url("./footer.css");
 
 /* 서브페이지 타이틀 */
 #title {
